feat(v1.1.0): zero-dependency embedded JRE installer, fleet telemetry, and unified licensing software integration